Added some changes regarding topic submission.

--- a/topic_submission/submission.bib
+++ b/topic_submission/submission.bib
@@ -3,7 +3,12 @@
   howpublished = {\url{https://llvm.org/}}
 }
 
-@misc{dwarf,
-  title = {The DWARF Debugging Standard},
-  howpublished = {\url{https://dwarfstd.org/}},
+@misc{crc,
+  title = {A Painless Guide to CRC Error Detection Algorithms},
+  howpublished = {\url{https://www.zlib.net/crc_v3.txt}}
+}
+
+@misc{riscv,
+  title = {RISC-V International},
+  howpublished = {\url{https://riscv.org/}}
 }
