--- a/topic_submission/submission.tex
+++ b/topic_submission/submission.tex
@@ -10,7 +10,7 @@
 \setlength{\hoffset}{-25mm}
 \def\zn{,\kern-0.09em,}
 
-\addbibresource{prijava.bib}
+\addbibresource{submission.bib}
 
 \begin{document}
 \thispagestyle{empty}
@@ -37,12 +37,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % U donji red upisati naziv master rada umesto teksta: >>Назив мастер рада<<  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\textbf{\textit{\zn ''}}
+\textbf{\textit{\znСемантичка детекција алгоритма CRC у оквиру компајлерске инфраструктуре LLVM за потребе RISC-V архитектуре''}}
 \end{minipage}\\
 \rule[4mm]{17.5cm}{.05mm}
 \begin{flushleft}
 \framebox{
-\begin{minipage}[t][10cm]{17cm}
+\begin{minipage}[t][10.5cm]{17cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 	-- unutrasnjost pravougaonika --    	  								  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -50,11 +50,31 @@
 
 \textbf{Значај теме и области:}
 
+Алгоритам CRC се широко употребљава за проверу интегритета података послатих 
+путем телекомуникационе мреже или уређаја за складиштење. Значај алгоритма 
+почива на његовој способности да детектује потенцијалне промене у подацима услед 
+њиховог трансфера кроз различите медијуме (жичане мреже, бежичне 
+мреже или оптичке каблове). Због свог учесталог коришћења препоручљиво је 
+користити оптимизоване верзије овог алгоритма. Иако и сами инжењери интензивно раде 
+на побољшању ефикасности свог софтвера, и даље се највећи број оптимизација одвија 
+унутар програмских преводилаца приликом превођења софтвера.
+
+Због своје специфичне архитектуре компајлер LLVM, као један од најпопуларнијих 
+преводилаца за програмске језике као што су C, C++, Rust и Swift, погодан је за 
+увођење разних видова оптимизација. Из тог, али и многих других разлога, 
+велики број светски признатих компанија га данас користи за превођење својих 
+пројеката.
 
 \vspace{1mm}
 
 \textbf{Специфични циљ рада:}
 
+Циљ рада је представљање компајлерске инфраструктуре LLVM и погодности коју она 
+пружа за увођење нових оптимизација у различитим фазама превођења програма. У раду 
+ће такође бити представљена и оптимизација имплементирана на нивоу LLVM 
+међурепрезентације која представља подршку за детектовање одређених неоптимизованих 
+верзија CRC алгоритма и њихову замену оптимизованим и семантички еквивалентним 
+верзијама, а за потребе RISC-V архитектуре на којој би се ти алгоритми извршавали.
 
 \vspace{1mm}
 
@@ -72,7 +92,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti:       ime i prezime, broj indeksa i modul studenta       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\makebox[9cm][c]{\textbf{Владимир Вуксановић, 1006/2021, информатика}}
+\makebox[9cm][c]{\textbf{Петар Тешић, 1064/2022, информатика}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti:                   ime i prezime mentora				  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -90,12 +110,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti datum podnosenja molbe									  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\makebox[5.5cm][c]{\textbf{01. 02. 2023.}}\makebox[5.5cm]{}  Чланови комисије\\
+\makebox[5.5cm][c]{\textbf{01. 04. 2024.}}\makebox[5.5cm]{}  Чланови комисије\\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin):							  %
 % u donji red umesto .\dotfill. upisati podatke o 1. clanu komisije		      %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{проф. др Филип Марић}\\
+\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{}\\
 \vspace{-8mm}\\
 \raisebox{4mm}%														
 [7mm][0mm]{\makebox[5.5cm][c]{\textit{(датум подношења молбе)}}}\makebox[5.5cm]{ }
@@ -103,7 +123,7 @@
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin): 							  %
 % u donji red umesto .\dotfill. upisati podatke o 2. clanu komisije           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-2. \makebox[6cm][l]{доц. др. Мирко Спасић}\\
+2. \makebox[6cm][l]{}\\
 
 \vspace{1cm}
 
