Added final version of a topic submission!

--- a/topic_submission/submission.tex
+++ b/topic_submission/submission.tex
@@ -33,16 +33,16 @@
 Молим да ми се одобри израда мастер рада под насловом:
 \end{flushleft}
 
-\begin{minipage}{16.5cm}
+\begin{minipage}{16cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % U donji red upisati naziv master rada umesto teksta: >>Назив мастер рада<<  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\textbf{\textit{\znСемантичка детекција алгоритма CRC у оквиру компајлерске инфраструктуре LLVM за потребе RISC-V архитектуре''}}
+\textbf{\textit{\znАутоматска детекција и оптимизација алгоритма CRC у оквиру компајлерске инфраструктуре LLVM''}}
 \end{minipage}\\
 \rule[4mm]{17.5cm}{.05mm}
 \begin{flushleft}
 \framebox{
-\begin{minipage}[t][10.5cm]{17cm}
+\begin{minipage}[t][11.6cm]{17cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 	-- unutrasnjost pravougaonika --    	  								  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -50,31 +50,36 @@
 
 \textbf{Значај теме и области:}
 
-Алгоритам CRC се широко употребљава за проверу интегритета података послатих 
-путем телекомуникационе мреже или уређаја за складиштење. Значај алгоритма 
+Алгоритам \textit{CRC} \cite{crc} се употребљава за проверу интегритета података послатих 
+путем телекомуникационе мреже. Значај алгоритма 
 почива на његовој способности да детектује потенцијалне промене у подацима услед 
 њиховог трансфера кроз различите медијуме (жичане мреже, бежичне 
-мреже или оптичке каблове). Због свог учесталог коришћења препоручљиво је 
-користити оптимизоване верзије овог алгоритма. Иако и сами инжењери интензивно раде 
-на побољшању ефикасности свог софтвера, и даље се највећи број оптимизација одвија 
-унутар програмских преводилаца приликом превођења софтвера.
+мреже или оптичке каблове). Због свог учесталог коришћења важно је 
+користити оптимизоване верзије овог алгоритма. Иако и сами програмери 
+интензивно раде на побољшању ефикасности свог софтвера, и даље се велики 
+број оптимизација одвија унутар програмских преводилаца.
 
-Због своје специфичне архитектуре компајлер LLVM, као један од најпопуларнијих 
-преводилаца за програмске језике као што су C, C++, Rust и Swift, погодан је за 
-увођење разних видова оптимизација. Из тог, али и многих других разлога, 
-велики број светски признатих компанија га данас користи за превођење својих 
-пројеката.
+Захваљујући  својој модуларној архитектури, компајлерска инфраструктура \textit{LLVM} 
+\cite{llvm} је погодна за увођење разних видова оптимизација. \textit{LLVM} је један од најпопуларнијих преводилаца за програмске језике као 
+што су \textit{C}, \textit{C++}, \textit{Rust} и \textit{Swift}. Велики број 
+светски признатих компанија (\textit{Apple}, \textit{Google}, \textit{Meta}) 
+користи \textit{LLVM} за превођење својих пројеката.
+
+Архитектура \textit{RISC-V} \cite{riscv} је веома популарна архитектура рачунара заснована на редукованом скупу инструкција. Пројекат архитектуре \textit{RISC-V} је јавно доступан. То омогућава корисницима да га конфигуришу према сопственим потребама. 
 
 \vspace{1mm}
 
 \textbf{Специфични циљ рада:}
 
-Циљ рада је представљање компајлерске инфраструктуре LLVM и погодности коју она 
-пружа за увођење нових оптимизација у различитим фазама превођења програма. У раду 
-ће такође бити представљена и оптимизација имплементирана на нивоу LLVM 
-међурепрезентације која представља подршку за детектовање одређених неоптимизованих 
-верзија CRC алгоритма и њихову замену оптимизованим и семантички еквивалентним 
-верзијама, а за потребе RISC-V архитектуре на којој би се ти алгоритми извршавали.
+Циљ рада је представљање компајлерске инфраструктуре \textit{LLVM} и погодности коју она 
+пружа за увођење нових оптимизација у различитим фазама превођења програма. 
+У раду ће бити имплементиранe и предствљене оптимизације на нивоу 
+\textit{LLVM} међурепрезентације које омогућавају детектовање 
+одређених неоптимизованих верзија алгоритма \textit{CRC} и њихову замену 
+оптимизованим и семантички еквивалентним верзијама. Имплементација има за циљ 
+употребу на архитектури \textit{RISC-V}, али се може користити и за друге 
+архитектуре. % DODATO!
+Мотивација за увођењем оптимизације јесте ефикасније превођење алгоритма \textit{CRC} како би се од изворног кода добио квалитетан машински к\^{о}д.
 
 \vspace{1mm}
 
@@ -88,7 +93,7 @@
 \end{minipage}
 }
 \end{flushleft}
-\vspace{1cm}
+\vspace{0.5cm}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % u donji red uneti:       ime i prezime, broj indeksa i modul studenta       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -115,7 +120,7 @@
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin):							  %
 % u donji red umesto .\dotfill. upisati podatke o 1. clanu komisije		      %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{}\\
+\rule[4mm]{5.5cm}{.05mm}\makebox[5.5cm]{ } 1. \makebox[6cm][l]{проф. др Филип Марић}\\
 \vspace{-8mm}\\
 \raisebox{4mm}%														
 [7mm][0mm]{\makebox[5.5cm][c]{\textit{(датум подношења молбе)}}}\makebox[5.5cm]{ }
@@ -123,9 +128,9 @@
 % POPUNJAVA MENTOR (rucno ili na sledeci nacin): 							  %
 % u donji red umesto .\dotfill. upisati podatke o 2. clanu komisije           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-2. \makebox[6cm][l]{}\\
+2. \makebox[5cm][l]{доц. др. Мирко Спасић}\\
 
-\vspace{1cm}
+\vspace{0.15cm}
 
 
 \begin{flushleft}
