Added almost preliminary version of the thesis

--- a/thesis/PetarTesicMasterRad.bib
+++ b/thesis/PetarTesicMasterRad.bib
@@ -1,11 +1,97 @@
 @misc{qemu,
 title = {{GNU QEMU}},
-note = {on-line at: \url{https://www.qemu.org/}}
+note = {on-line at: \url{https://www.qemu.org/}},
+author = {The QEMU Project Developers}
 }
 
 @misc{extending_llvm,
 title = {{Extending LLVM: Adding instructions, intrinsics, types, etc.}},
-note = {on-line at: \url{https://llvm.org/docs/ExtendingLLVM.html}}
+note = {on-line at: \url{https://llvm.org/docs/ExtendingLLVM.html}},
+author = {The LLVM Foundation}
+}
+
+@misc{patch_about_crc_support,
+title = {{RISC-V: Added support for CRC.}},
+note = {on-line at: \url{https://www.mail-archive.com/gcc-patches@gcc.gnu.org/msg315381.html}},
+author={Mariam Harutyunyan}
+}
+
+@misc{cyclic_codes,
+title = {{Cyclic Codes}},
+note = {on-line at: \url{https://users.math.msu.edu/users/halljo/classes/codenotes/Cyclic.pdf}},
+author = {Michigan State University}
+}
+
+@misc{arm_processor,
+title = {{ARM: Microprocessor Cores and Processor Technology}},
+note = {on-line at: \url{https://www.arm.com/products/silicon-ip-cpu}},
+author = {Arm Limited (or its affiliates).}
+}
+
+@misc{ethernet_protocol,
+title = {{Ethernet Protocol - an overview}},
+note = {on-line at: \url{https://www.sciencedirect.com/topics/computer-science/ethernet-protocol}},
+author = {Elsevier B.V.}
+}
+
+@misc{chisel,
+title = {{Chisel Software-defined hardware}},
+note = {on-line at: \url{https://www.chisel-lang.org/}},
+author = {ChipsAlliance}
+}
+
+@misc{riscv_processor,
+title = {{What is a RISC-V processor?}},
+note = {on-line at: \url{https://codasip.com/glossary/risc-v-processors/}},
+author = {Codasip}
+}
+
+@misc{riscv_isa_publication,
+title = {{The RISC-V Instruction Set Manual, Volume I: Base User-Level ISA}},
+note = {on-line at: \url{https://people.eecs.berkeley.edu/~krste/papers/EECS-2011-62.pdf}},
+author = {Andrew Waterman Yunsup Lee David A. Patterson Krste Asanovic}
+}
+
+@misc{riscv_international,
+title = {{History of RISC-V}},
+note = {on-line at: \url{https://riscv.org/about/history/}},
+author = {RISC-V International}
+}
+
+@misc{isa,
+title = {{RISCV ISA: Specifications}},
+note = {on-line at: \url{https://riscv.org/technical/specifications/}},
+author = {RISC-V International}
+}
+
+@misc{bluetooth,
+title = {{What is Bluetooth and how do I use it?}},
+note = {on-line at: \url{https://www.samsung.com/uk/support/mobile-devices/what-is-bluetooth/}},
+author = {Samsung. All rights reserved.}
+}
+
+@misc{raid,
+title = {{RAID (redundant array of independent disks)}},
+note = {on-line at: \url{https://www.techtarget.com/searchstorage/definition/RAID}},
+author = {TechTarget}
+} 
+
+@misc{intel_processor,
+title = {{Intel Processors for PC, Laptops, Servers, and AI}},
+note = {on-line at: \url{https://www.intel.com/content/www/us/en/products/details/processors.html}},
+author = {Intel Corporation}
+}
+
+@misc{mips_processor,
+title = {{MIPS Processor, RISC-V, Innovate Compute}},
+note = {on-line at: \url{https://mips.com/products/hardware/}},
+author = {MIPS All rights reserved}
+}
+
+@misc{riscv_bitmanip,
+title = {{RISC-V Bit-manipulation A, B, C and S Extensions}},
+note = {on-line at: \url{https://five-embeddev.com/riscv-bitmanip/1.0.0/bitmanip.html}},
+author = {RISC-V Foundation}
 }
 
 @misc{llvm_testing,
@@ -19,6 +105,33 @@ title = {{GNU gcc}},
 note = {on-line at: \url{http://gcc.gnu.org/}},
      author = {Free Software Foundation},
      year = {2013}
+}
+
+@misc{rustc,
+title = {{Rust Compiler Development Guide}},
+note = {on-line at: \url{https://rustc-dev-guide.rust-lang.org/getting-started.html}},
+     author = {Free Software Foundation}
+}
+
+@misc{graalvm,
+title = {{What is Oracle GraalVM?}},
+note = {on-line at: \url{https://www.oracle.com/java/graalvm/what-is-graalvm/}},
+     author = {Oracle},
+     year = 2024
+}
+
+@misc{mojo,
+title = {{Mojo Programming Language}},
+note = {on-line at: \url{https://www.modular.com/max/mojo}},
+     author = {Modular Inc},
+     year = {2024}
+}
+
+@misc{acm,
+title = {{ACM Software System Award}},
+note = {on-line at: \url{https://awards.acm.org/software-system}},
+     author = {ACM Inc},
+     year = {2024}
 }
 
 @book{cooper2022engineering,
@@ -40,9 +153,167 @@ note = {on-line at: \url{http://gcc.gnu.org/}},
   publisher={Creative Commons}
 }
 
+
+
+@misc{what_is_crc,
+  title={{What Is Cyclic Redundancy Check (CRC), and It’s Role in Checking Error}},
+  note={on-line at: \url{https://www.simplilearn.com/tutorials/networking-tutorial/what-is-cyclic-redundancy-check}},
+  author={Simplilearn Solutions. All Rights Reserved.}
+}
+
 @misc{llvm,
   title={{The LLVM Compiler Infrastructure}},
   note={on-line at: \url{https://llvm.org/}},
+  author={The LLVM Foundation}
+}
+
+@misc{mlir,
+  title={{MLIR - Multi-Level Intermediate Representation Overview}},
+  note={on-line at: \url{https://mlir.llvm.org/}},
+  author = {The MLIR Team}
+  
+}
+
+@misc{klee,
+  title={{KLEE Symbolic Execution Engine}},
+  note={on-line at: \url{https://klee-se.org/}},
+  author = {The KLEE Team}
+}
+
+@misc{polly,
+  title={{Polly - LLVM Framework for High-Level Loop and Data-Locality Optimizations}},
+  note={on-line at: \url{https://polly.llvm.org/}},
+  author = {}
+}
+
+@misc{dependence_analysis,
+  title={{Dependence Analysis}},
+  note={on-line at: \url{https://www.sciencedirect.com/topics/computer-science/dependence-analysis}},
+  author={EduRev - Education Revolution}
+}
+
+@misc{pointer_analysis,
+  title={{Pointer-Analysis}},
+  note={on-line at: \url{https://www.geeksforgeeks.org/pointer-analysis/}},
+  author={GeeksforGeeks}
+}
+
+@misc{what_is_riscv,
+  title={{What is RISC-V?}},
+  note={on-line at: \url{https://www.synopsys.com/glossary/what-is-risc-v.html}},
+  author={Synopsys, Inc. All Rights Reserved }
+}
+
+@misc{alias_analysis,
+  title={{LLVM Alias Analysis Infrastructure}},
+  note={on-line at: \url{https://llvm.org/docs/AliasAnalysis.html}},
+  author={The LLVM Foundation}
+}
+
+@misc{data_flow_analysis,
+  title={{Introduction: Data Flow Analysis}},
+  note={on-line at: \url{https://edurev.in/t/187294/Introduction-Data-Flow-Analysis}},
+  author={Science Direct}
+}
+
+@misc{openmp,
+  title={{Welcome to the documentation of OpenMP in LLVM!}},
+  note={on-line at: \url{https://openmp.llvm.org/}},
+  author = {LLVM/OpenMP}
+}
+
+@misc{nvidia,
+  title={{CUDA LLVM Compiler}},
+  note={on-line at: \url{https://developer.nvidia.com/cuda-llvm-compiler}},
+  author={Nvidia Corporation},
+  year={2024}
+}
+
+@misc{google,
+  title={{Google Is Hiring More LLVM/Clang Developers}},
+  note={on-line at: \url{https://www.phoronix.com/news/Google-More-LLVM-Developers}},
+  author={Phoronix Media}
+}
+
+@misc{apple,
+  title={{Apple's other open secret: the LLVM Compiler}},
+  note={on-line at: \url{https://appleinsider.com/articles/08/06/20/apples_other_open_secret_the_llvm_complier}},
+  author={Quiller Media, Inc.},
+  year={2024}
+}
+
+@book{dragon_book,
+author = {Aho, Alfred V. and Lam, Monica S. and Sethi, Ravi and Ullman, Jeffrey D.},
+title = {Compilers: Principles, Techniques, and Tools (2nd Edition)},
+year = {2006},
+isbn = {0321486811},
+publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+address = {USA}
+}
+
+@article{backend_quote,
+  title={How do compilers work 3 — Back end},
+  note={on-line at: \url{https://medium.com/@ChrisCanCompute/how-do-compilers-work-3-back-end-bcd860b849d9}},
+  author={Chris Arnott},
+  journal = {Medium},
+  year = {2017}
+}
+
+@article{middleend_quote,
+  title={How do compilers work 2 — Middle end},
+  note={on-line at: \url{https://medium.com/@ChrisCanCompute/how-do-compilers-work-2-middle-end-c4c8cff80b90}},
+  author={Chris Arnott},
+  journal = {Medium},
+  year = {2017}
+}
+
+@article{frontend_quote,
+  title={How do compilers work 1 — Front end},
+  note={on-line at: \url{https://medium.com/@ChrisCanCompute/how-do-compilers-work-1-front-end-5c308b56c44c}},
+  author={Chris Arnott},
+  journal = {Medium},
+  year = {2017}
+}
+
+@misc{mir_documentation,
+  title={{Machine IR (MIR) Format Reference Manual}},
+  note={on-line at: \url{https://llvm.org/docs/MIRLangRef.html}},
+  author={The LLVM Foundation}
+}
+
+@misc{ast,
+  title={{Abstract Syntax Tree vs Parse Tree}},
+  note={on-line at: \url{https://www.geeksforgeeks.org/abstract-syntax-tree-vs-parse-tree/}},
+  author={GeeksforGeeks}
+}
+
+@misc{filecheck,
+  title={{FileCheck - Flexible pattern matching file verifier}},
+  note={on-line at: \url{https://llvm.org/docs/CommandGuide/FileCheck.html}},
+  author={The LLVM Foundation}
+}
+
+@misc{test_suite,
+  title={{test-suite Guide}},
+  note={on-line at: \url{https://www.llvm.org/docs/TestSuiteGuide.html}},
+  author={The LLVM Foundation}
+}
+
+@misc{llvm_lld,
+  title={{LLD - The LLVM Linker}},
+  note={on-line at: \url{https://lld.llvm.org/}},
+  author={The LLVM Foundation}
+}
+
+@misc{llvm_core,
+  title={{LLVM Core Libraries}},
+  note={on-line at: \url{https://llvm.org/docs/doxygen/group__LLVMCCore.html}},
+  author={The LLVM Foundation}
+}
+
+@misc{clang,
+  title={{Clang: a C language family frontend for LLVM}},
+  note={on-line at: \url{https://clang.llvm.org/}},
   author={The LLVM Foundation}
 }
 
@@ -118,12 +389,6 @@ edition = {2nd},
 abstract = {"Modern Compiler Design" makes the topic of compiler design more accessible by focusing on principles and techniques of wide application. By carefully distinguishing between the essential (material that has a high chance of being useful) and the incidental (material that will be of benefit only in exceptional cases) much useful information was packed in this comprehensive volume. The student who has finished this book can expect to understand the workings of and add to a language processor for each of the modern paradigms, and be able to read the literature on how to proceed. The first provides a firm basis, the second potential for growth.}
 }
 
-@inproceedings{Zhao2010FunctionO,
-  title={Function Outlining},
-  author={Peng Zhao and Jos{\'e} Nelson Amaral},
-  year={2010}
-}
-
 @article{Zhao2005FunctionOA,
   title={Function outlining and partial inlining},
   author={Peng Zhao and Jos{\'e} Nelson Amaral},
@@ -166,12 +431,6 @@ abstract = {"Modern Compiler Design" makes the topic of compiler design more acc
 @misc{lit,
   title={{lit - LLVM Integrated Tester}},
   note={on-line at: \url{https://www.llvm.org/docs/CommandGuide/lit.html}},
-  author={The LLVM Foundation}
-}
-
-@misc{filecheck,
-  title={{FileCheck - Flexible pattern matching file verifier}},
-  note={on-line at: \url{https://www.llvm.org/docs/CommandGuide/FileCheck.html}},
   author={The LLVM Foundation}
 }
 
