Added final version of the thesis

--- a/thesis/PetarTesicMasterRad.bib
+++ b/thesis/PetarTesicMasterRad.bib
@@ -16,6 +16,12 @@ note = {on-line at: \url{https://www.mail-archive.com/gcc-patches@gcc.gnu.org/ms
 author={Mariam Harutyunyan}
 }
 
+@misc{ssa_form,
+title = {{Static Single Assignment (with relevant examples)}},
+note = {on-line at: \url{https://www.geeksforgeeks.org/static-single-assignment-with-relevant-examples/}},
+author={GeeksforGeeks}
+}
+
 @misc{cyclic_codes,
 title = {{Cyclic Codes}},
 note = {on-line at: \url{https://users.math.msu.edu/users/halljo/classes/codenotes/Cyclic.pdf}},
@@ -132,6 +138,22 @@ title = {{ACM Software System Award}},
 note = {on-line at: \url{https://awards.acm.org/software-system}},
      author = {ACM Inc},
      year = {2024}
+}
+
+@misc{galois_field,
+title = {{Finite Fields of the Form GF (2n)}},
+note = {on-line at: \url{https://engineering.purdue.edu/kak/compsec/NewLectures/Lecture7.pdf}},
+author = {Avinash Kak, Purdue University},
+year = {2024}
+}
+
+@book{crc_attributes,
+  title={A Tutorial on CRC Computation},
+  author={Tenkasi V. Ramabadram, Snil S. Gaitonde},
+  isbn={9780128189269},
+  url={https://people.cs.pitt.edu/~znati/Courses/WANs/Dir-Rel/related/TutorialCRCImplement.pdf},
+  year={1988},
+  publisher={IEEE MICRO}
 }
 
 @book{cooper2022engineering,
